upgrade: companion files