@@ -21,11 +21,12 @@
 export JAVA_HOME=/usr/jdk/jdk1.6.0_31
 
 # Set Oozie specific environment variables here.
+export OOZIE_CLIENT_OPTS="${OOZIE_CLIENT_OPTS} -Doozie.connection.retry.count=5"
 
 # Settings for the Embedded Tomcat that runs Oozie
 # Java System properties for Oozie should be specified in this variable
 #
-# export CATALINA_OPTS=
+export CATALINA_OPTS="${CATALINA_OPTS} -Xmx2048m -XX:MaxPermSize=256m"
 
 # Oozie configuration file to load from Oozie configuration directory
 #
